--- a/src/components/singleTimeline/singleTimeline.pcss
+++ b/src/components/singleTimeline/singleTimeline.pcss
@@ -1,18 +1,18 @@
 .single-component {
   cursor: default;
 }
-.full-name {
+.single-component__name {
   display: flex;
   justify-content: center;
   font-size: 24px;
   margin-bottom: 15px;
 }
 
-.about {
+.single-component__about {
   margin-bottom: 15px;
 }
 
-.registered {
+.single-component__registered {
   text-align: end;
   font-size: 17px;
   margin-bottom: 20px;
