--- a/src/components/timelineBox/timelineBox.pcss
+++ b/src/components/timelineBox/timelineBox.pcss
@@ -1,11 +1,11 @@
-.timelines__list {
+.timeline-component__list {
   display: flex;
   width: 100%;
   flex-direction: column;
   position: relative;
 }
 
-.timelines__item {
+.timeline-component__item {
   display: flex;
   background-color: rgba(255, 255, 255, .7);
   box-shadow: 4px 3px 20px 0 rgba(0,0,0,.09);
@@ -16,12 +16,12 @@
   width: 50%;
 }
 
-.timelines__item:nth-child(odd) {
+.timeline-component__item:nth-child(odd) {
   box-shadow: 4px 3px 20px 0 #808080;
   z-index: 10;
 }
 
-.timelines__item:nth-child(even) {
+.timeline-component__item:nth-child(even) {
   display: flex;
   align-self: flex-end;
   background-color: white;
